<?xml version="1.0"?>
<package format="3">
  <name>dynamixel_workbench_msgs</name>
  <version>1.0.0</version>
  <description>
    This package includes ROS messages and services for dynamixel_workbench packages
  </description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/dynamixel_workbench_msgs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/software/dynamixel/dynamixel_workbench/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/dynamixel-workbench-msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/dynamixel-workbench-msgs/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
