<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator</name>
  <version>1.0.0</version>
  <description>
    ROS2 packages for OpenManipulator.
  </description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>open_manipulator_control_gui</exec_depend>
  <exec_depend>open_manipulator_controller</exec_depend>
  <exec_depend>open_manipulator_description</exec_depend>
  <exec_depend>open_manipulator_libs</exec_depend>
  <exec_depend>open_manipulator_moveit</exec_depend>
  <exec_depend>open_manipulator_teleop</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>