<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_libs</name>
  <version>2.0.1</version>
  <description>
    OpenManipulator library (Kinematics lib., Dynamixel lib., Drawing path lib.)
  </description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_libs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator/issues</url>
  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>robotis_manipulator</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>cmake_modules</depend>
  <depend>eigen</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
