<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_simulations</name>
  <version>1.0.0</version>
  <description>
    ROS2 packages for OpenManipulator.
    Simulation packages for OpenManipulator
  </description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_simulations</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_simulations/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>open_manipulator_gazebo</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>


